--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    // --prefix is to move to client folder and not just install the dependencies in the server side itself
   },
   "author": "",
   "license": "ISC",
