--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "nodemon": "^1.14.11",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
+    "react-typed": "^1.0.8",
     "sendgrid": "^5.2.3",
-    "stripe": "^5.4.0"
+    "stripe": "^5.4.0",
+    "typed.js": "^2.0.6"
   }
 }
