--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "webhook": "lt -p 5000 -s kasdjatinkasd"
   },
-
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -24,10 +23,12 @@
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "localtunnel": "^1.8.3",
+    "lodash": "^4.17.5",
     "mongoose": "^5.0.2",
     "nodemon": "^1.14.11",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
+    "path-parser": "^4.0.2",
     "sendgrid": "^5.2.3",
     "stripe": "^5.4.0"
   }
